# slothpy

./: (SS)-1.cif  .gitignore  CTM.ipynb  Er.ipynb  Gpu.ipynb  LaNCN2.cif  Lorenzo_Co.ipynb  NdCoN3.docx  NdNCN2.cif  README.md  Seminarium.ipynb  SlothPy_tutorial-Copy1.ipynb  SlothPy_tutorial.ipynb  SlothPy_tutorial_turbo.ipynb  SlothPy_tutorial_turbo_pres.ipynb  Sloth_demo.ipynb  TbCo_deh.cif  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  _compound_object (3).py  _compound_object (4).py  _compound_object (5).py  _compound_object (7).py  _compound_object (8).py  _compound_object (9).py  benchmark_orbach.inp  compute_diagonal.c  compute_diagonal.pyx  energy_3d_test (1).py  generate_ll_grid.py  lorenzo.inp  my_mth_array.csv  perturbation_at_the_end.ipynb  pyproject.toml  pytest.ini  requirements.txt  sc_ap211_0m_a.cif  seminarium.py  setup.py  (+3 more)
.ipynb_checkpoints/: Lorenzo_Co-checkpoint.ipynb  Sloth_demo-checkpoint.ipynb  Untitled-checkpoint.ipynb
Data/: grids_over_hemisphere.py  test.py
benchmark/: mat_diag.py
doc/: requirements.txt
doc/source/: about.rst  compound.rst  conf.py  dummy.rst  exporting_module.rst  general_utilities.rst  how_to_cite.rst  how_to_start.rst  index.rst  installation.rst  reference_manual.rst  settings.rst  slothpy.rst
scripts/displacements_CP2K_docker_desktop/: README.md  XC.inc  YCo.xyz  dof_0_disp_0.xyz  example_opt.inp  run_displacements_CP2K.py  scf.inc  subsys.inc
slothPy/: __init__.py  tomek.py
slothpy/: __init__.py  export.py  exporting.py  plot.py  requirements.txt  settings.ini
slothpy/_angular_momentum/: __init__.py  _pseudo_spin_ito.py  _rotation.py
slothpy/_general_utilities/: __init__.py  _auto_tune.py  _constants.py  _df_utilities.py  _direct_product_space.py  _grids_over_hemisphere.py  _grids_over_sphere.py  _io.py  _lapack.pyx  _math_expresions.py  _numba_methods.py  _plot.py  _ploting_utilities.py  _system.py  _utils.py
slothpy/_gui/: _gui_test.py  _monitor_gui.py  _plot_gui.py  _terminal_gui.py
slothpy/_lattice_dynamics/: _phonon_dispersion.py
slothpy/_magnetism/: _g_tensor.py  _magnetisation.py  _magnetisation_dask.py  _magnetisation_dask_2.py  _magnetisation_gpu.py  _magnetisation_turbo.py  _susceptibility.py  _zeeman.py  _zeeman_lanczos.py
slothpy/angular_momentum/: _pseudo_spin_ito.py  _rotation.py  pseudo_spin_ito.py  rotation.py
slothpy/core/: __init__.py  _compound_object.py  _config.py  _constants.py  _creation_functions.py  _crystal_lattice_object.py  _delayed_methods.py  _drivers.py  _hamiltonian_object.py  _hessian_object.py  _input_parser.py  _lapack.py  _process_pool.py  _registry.py  _slothpy_exception.py  _slothpy_exceptions.py  _slt_file.py  _system.py  _thread_controler.py  compound_object.py  creation_functions.py  slt_file_object.py
slothpy/general_utilities/: _auto_tune.py  _constants.py  _grids_over_hemisphere.py  _io.py  _math_expresions.py  _system.py  grids_over_hemisphere.py  io.py  system.py  (+1 more)
(+352 files in other folders)
