[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slothpy"
version = "0.1.1"
dynamic = ["dependencies"]
authors = [
  { name="Mikolaj Tadeusz Zychowicz", email="mikolaj.zychowicz@uj.edu.pl" },
]
description = "A small molecular magnetism related package."
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/MTZ-dev/SlothPy"
"Bug Tracker" = "https://github.com/MTZ-dev/SlothPy/issues"
