[build-system]
requires = ["hatchling", "setuptools>=42", "wheel", "cython>=3.0.10", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "slothpy"
version = "0.3.0"
authors = [
  { name="Mikolaj Tadeusz Zychowicz", email="mikolaj.zychowicz@uj.edu.pl" },
]
description = "A small molecular magnetism related package."
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0.1",
  "scipy>=1.14.0",
  "cython>=3.0.10",
  "numba>=0.60.0",
  "threadpoolctl>=3.2.0",
  "h5py>=3.11.0",
  "pandas>=2.2.2",
  "matplotlib>=3.9.1",
  "setuptools>=71.1.0",
  "ipython>=8.13.2",
  "psutil>=5.9.5",
  "docx>=0.2.4",
  "python-docx>=1.1.2",
  "python-docx>=1.0.1",
  "cycler>=0.11.0",
  "PyQt6>=6.7.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MTZ-dev/SlothPy"
"Bug Tracker" = "https://github.com/MTZ-dev/SlothPy/issues"
